Bug 1024343: The document should not stop animations when it is being swapped. r=smaug